Update 02. Historical Context.md

--- a/Collaborative AI/resources/02. Historical Context.md
+++ b/Collaborative AI/resources/02. Historical Context.md
@@ -1,14 +1,20 @@
 ### Theoretical Frameworks and Historical Context: Foundations for Collaborative AI in BBS
 
-This document provides some detail and resources for some of the theoretical predecessors that have informed and influenced aspects of the Balanced Blended Space (BBS) framework.  In particular, we investigate the transition from traditional models of human-computer interaction to a symmetrical, collaborative AI paradigm. The following thinkers and their frameworks are pivotal in contextualizing and contrasting BBS philosophy.
+This document expands upon the theoretical underpinnings that inform the Balanced Blended Space (BBS) framework, particularly focusing on the transition from traditional models of human-computer interaction to a symmetrical, collaborative AI paradigm. The following thinkers and their frameworks are pivotal in contextualizing and contrasting BBS philosophy.  
 
 ---
 
 #### Alan Turing – Computational Foundations and the Imitation Game
 
-Turing's legacy lies in foundational ideas about machine intelligence and the boundaries of cognition. In his seminal 1950 paper, *"Computing Machinery and Intelligence,"* Turing introduces what he calls the **Imitation Game**, a thought experiment in which a human judge interacts through text with two participants—one human and one machine—and must determine which is which. If the machine can successfully imitate human responses to the point that the judge cannot reliably distinguish it from the human, the machine is said to exhibit intelligent behavior.
+Alan Turing was a British mathematician, logician, cryptanalyst, and early computer scientist whose work laid the foundation for modern computing and artificial intelligence. He is widely recognized for his pivotal role in breaking the German Enigma code during World War II, which significantly contributed to the Allied victory. Despite his profound contributions to science and national security, Turing was persecuted for his homosexuality and died by suicide in 1954 after being subjected to chemical castration by the British government. His tragic death remains a sobering reminder of the consequences of systemic injustice, even toward individuals of extraordinary brilliance.  
 
-This framing prioritizes **behavioral indistinguishability** as the test of machine intelligence.
+Turing's legacy begins even before the Imitation Game, with his groundbreaking 1937 paper *"On Computable Numbers, with an Application to the Entscheidungsproblem."* In this work, Turing defines a theoretical machine (now called a Turing machine) capable of performing any computable task. This abstract model underpins all modern digital computers, meaning that any device we consider a classical computer—regardless of hardware design—can be functionally represented by a Turing machine. This abstraction laid the mathematical groundwork for modern computing and introduced the concept of algorithmic procedures as mechanical processes. It addressed the limits of what can be computed and served as a foundation for thinking about the capabilities and boundaries of machines. While quantum computing (e.g., using qubits) introduces new models that exploit superposition and entanglement, many researchers consider quantum machines to be **Turing-equivalent**—capable of solving the same class of problems, but potentially more efficiently in some cases. Thus, Turing’s model continues to define the boundary between the computable and the non-computable, even in the era of quantum computation.  
+
+**Computational Intelligence**  
+
+Then, in his seminal 1950 paper, *"Computing Machinery and Intelligence,"* Turing introduces what he calls the **Imitation Game**, a thought experiment in which a human judge interacts through text with two participants—one human and one machine—and must determine which is which. If the machine can successfully imitate human responses to the point that the judge cannot reliably distinguish it from the human, the machine is said to exhibit intelligent behavior.  
+
+This framing prioritizes **behavioral indistinguishability** as the test of machine intelligence.  
 
 **Contrast with BBS:**
 
@@ -17,19 +23,22 @@ This framing prioritizes **behavioral indistinguishability** as the test of mach
 
 **Suggested Reading:**
 
+- Turing, Alan M. (1937). *On Computable Numbers, with an Application to the Entscheidungsproblem*. [Read here](https://people.math.ethz.ch/~halorenz/4students/Literatur/TuringFullText.pdf)  
 - Turing, Alan M. (1950). *Computing Machinery and Intelligence*. Mind, 59(236), 433–460. [Read here](https://courses.cs.umbc.edu/471/papers/turing.pdf)
 
 ---
 
 #### Norbert Wiener – Cybernetics and Feedback Systems
 
-Wiener’s cybernetics introduced the idea of control and communication in the animal and machine, emphasizing feedback loops, system adaptation, and the regulation of behavior through signals and responses. At its core, cybernetics is concerned with how systems maintain stability and respond to environmental changes. Wiener proposed that both biological and mechanical systems could be modeled similarly, with feedback mechanisms governing actions to maintain desired outcomes.
+Norbert Wiener was an American mathematician and philosopher best known as the founder of cybernetics, a field that profoundly influenced computer science, control theory, biology, and cognitive science. A child prodigy who earned his PhD at the age of 18, Wiener worked on ballistics during World War II, where his experiences led him to conceptualize machines capable of real-time feedback and correction. His postwar work warned of the ethical responsibilities accompanying technological advancement, especially concerning automation and intelligent systems. Deeply interdisciplinary and forward-thinking, Wiener’s legacy includes both technical innovation and moral reflection on the role of machines in society.  His theories laid the groundwork for systems thinking, robotics, real-time computational systems, and adaptive algorithms—all crucial to the development of interactive technologies and intelligent systems.  
+
+Wiener’s cybernetics introduced the idea of control and communication in the animal and machine, emphasizing feedback loops, system adaptation, and the regulation of behavior through signals and responses. A central concept in cybernetics is the feedback loop, in which a system continuously compares its actual performance to a desired goal and uses the difference (the error signal) to make corrective adjustments. 
+
+A classic example of this is the **servo mechanism**, a type of motorized system that uses sensors, control logic, and actuators to achieve and maintain a target state. It includes components such as an input command (desired position or speed), a sensor to monitor actual output, a comparator to calculate error, and a controller to drive an actuator that minimizes the error. These mechanisms embody the core of cybernetic theory—self-regulation through real-time feedback. At its core, cybernetics is concerned with how systems maintain stability and respond to environmental changes. Wiener proposed that both biological and mechanical systems could be modeled similarly, with feedback mechanisms governing actions to maintain desired outcomes.  
 
 **Suggested Reading:**
 
-- Wiener, Norbert. (1948). *Cybernetics: Or Control and Communication in the Animal and the Machine*. MIT Press. [Read online](https://direct.mit.edu/books/oa-monograph/4581/Cybernetics-or-Control-and-Communication-in-the)
-
-His theories laid the groundwork for systems thinking, robotics, real-time computational systems, and adaptive algorithms—all crucial to the development of interactive technologies and intelligent systems.
+- Wiener, Norbert. (1948). *Cybernetics: Or Control and Communication in the Animal and the Machine*. MIT Press. [Read online](https://monoskop.org/images/0/0a/Wiener_Norbert_Cybernetics_or_Control_and_Communication_in_the_Animal_and_the_Machine_2nd_ed.pdf)
 
 **Contrast with BBS:**
 
@@ -38,20 +47,22 @@ His theories laid the groundwork for systems thinking, robotics, real-time compu
 
 ---
 
-#### Donna Haraway – Cyborg Theory and Hybrid Subjectivities  
+#### Donna Haraway – Cyborg Theory and Hybrid Subjectivities
 
-In *"A Cyborg Manifesto,"* Haraway critiques traditional boundaries between human, animal, and machine. She introduces the cyborg as a hybrid figure that resists binaries—natural/artificial, physical/virtual.  The manifesto challenges essentialist notions of identity, arguing that the boundaries between human, animal, and machine are socially constructed and increasingly porous. The cyborg is presented as a metaphor for rejecting rigid binaries—such as natural vs. artificial or male vs. female—and instead embracing a world of hybrids, networks, and interdependencies. Haraway's cyborg is not just a fusion of biology and technology, but a political and philosophical provocation that destabilizes traditional frameworks of power, control, and epistemology.
+Donna Haraway is an American scholar in the fields of science and technology studies, feminism, and cultural theory. She is best known for her 1985 essay, "A Cyborg Manifesto," which radically reimagined the relationship between humans and machines. Haraway has consistently challenged rigid boundaries—between human and machine, nature and culture, male and female—and instead proposed the cyborg as a metaphor for hybridized, interconnected identities. Her work has become foundational in feminist technoscience and posthumanist thought, influencing how scholars conceptualize agency, embodiment, and technological mediation in the digital age.  
+
+Haraway’s *"A Cyborg Manifesto"* challenges essentialist notions of identity, arguing that the boundaries between human, animal, and machine are socially constructed and increasingly porous. The cyborg is presented as a metaphor for rejecting rigid binaries—such as natural vs. artificial or male vs. female—and instead embracing a world of hybrids, networks, and interdependencies. Haraway's cyborg is not just a fusion of biology and technology, but a political and philosophical provocation that destabilizes traditional frameworks of power, control, and epistemology.  
 
 Her manifesto was pivotal in feminist science and technology studies, encouraging the view that technology can be a site of resistance and redefinition of identity rather than oppression.
 
 **Alignment with BBS:**
 
 - Haraway’s concept of the cyborg aligns closely with BBS’s **blending** of physical, virtual, and conceptual spaces.
-- Both frameworks reject the notion of AI as separate or subordinate, advocating for **interdependent identities** and spaces.  
+- Both frameworks reject the notion of AI as separate or subordinate, advocating for **interdependent identities** and spaces.
 
 **Suggested Reading:**
 
-- Haraway, Donna. (1985). *A Cyborg Manifesto: Science, Technology, and Socialist-Feminism in the Late Twentieth Century*. [Read online](https://www.sfu.ca/~decaste/OISE/page2/files/HarawayCyborg.pdf)
+- Haraway, Donna. (1985). *A Cyborg Manifesto: Science, Technology, and Socialist-Feminism in the Late Twentieth Century*. [Read online](https://web.archive.org/web/20201006033401/https://www.writing.upenn.edu/~afilreis/Sci-Cult/haraway-cyborg.html)
 
 **Alignment with BBS:**
 
@@ -62,13 +73,14 @@ Her manifesto was pivotal in feminist science and technology studies, encouragin
 
 #### Bruno Latour – Actor-Network Theory (ANT)
 
+Bruno Latour was a French philosopher, anthropologist, and sociologist of science best known for developing Actor-Network Theory (ANT), a framework that redefined how we think about agency, networks, and systems. He challenged traditional divisions between nature and society, object and subject, and argued that both human and non-human entities—technologies, texts, animals, institutions—must be seen as active participants (or "actants") in any networked system of meaning or action. Latour's work was foundational in the field of Science and Technology Studies (STS), and his contributions continue to influence interdisciplinary research into the role of technology, infrastructure, and distributed agency in shaping the world around us.
+
 Latour’s ANT decentralizes agency, suggesting that both human and non-human actors participate in networks of action and meaning-making. Agency is not held but distributed across systems. Rather than isolating intentionality or authorship within human subjects, ANT treats technology, objects, texts, and systems as active participants—or "actants"—in shaping outcomes within complex sociotechnical networks.
 
 This theory is foundational in science and technology studies and challenges traditional hierarchies by flattening the landscape of actors into relational nodes.
 
 **Suggested Reading:**
-- Latour, Bruno. (2005). *Reassembling the Social: An Introduction to Actor-Network-Theory*. Oxford University Press. [Read online](https://www.uni-weimar.de/kunst-und-gestaltung/wiki/images/Latour-introduction-to-ant-theory.pdf)  
-
+- Latour, Bruno. (2005). *Reassembling the Social: An Introduction to Actor-Network-Theory*. Oxford University Press. [Read online (archive)](https://monoskop.org/images/5/5b/Latour_Bruno_Reassembling_the_Social_An_Introduction_to_Actor-Network-Theory.pdf)
 
 **Alignment and Extension in BBS:**
 
