--- a/Collaborative AI/resources/02. Historical Context.md
+++ b/Collaborative AI/resources/02. Historical Context.md
@@ -1,6 +1,6 @@
 ### Theoretical Frameworks and Historical Context: Foundations for Collaborative AI in BBS
 
-This document expands upon the theoretical underpinnings that inform the Balanced Blended Space (BBS) framework, particularly focusing on the transition from traditional models of human-computer interaction to a symmetrical, collaborative AI paradigm. The following thinkers and their frameworks are pivotal in contextualizing and contrasting BBS philosophy.  
+This document expands upon the theoretical underpinnings that inform the Balanced Blended Space (BBS) framework, focusing on the transition from traditional models of human-computer interaction to a more symmetrical, collaborative AI paradigm. The following thinkers and their frameworks are pivotal in contextualizing and contrasting BBS philosophy.  
 
 ### Table of Contents
 - [Alan Turing – Computational Foundations and the Imitation Game](#alan-turing--computational-foundations-and-the-imitation-game)  
