Update 02. Historical Context.md

--- a/Collaborative AI/resources/02. Historical Context.md
+++ b/Collaborative AI/resources/02. Historical Context.md
@@ -3,14 +3,14 @@
 This document expands upon the theoretical underpinnings that inform the Balanced Blended Space (BBS) framework, focusing on the transition from traditional models of human-computer interaction to a more symmetrical, collaborative AI paradigm. The following thinkers and their frameworks are pivotal in contextualizing and contrasting BBS philosophy.  
 
 ### Table of Contents
-- [Alan Turing – Computational Foundations and the Imitation Game](#alan-turing--computational-foundations-and-the-imitation-game)  
-  *Originator of the Turing machine and the Imitation Game, laying the groundwork for computational models of intelligence.*
-- [Norbert Wiener – Cybernetics and Feedback Systems](#norbert-wiener--cybernetics-and-feedback-systems)  
-  *Founder of cybernetics, introducing self-regulating systems through feedback loops and adaptive behavior.*
-- [Donna Haraway – Cyborg Theory and Hybrid Subjectivities](#donna-haraway--cyborg-theory-and-hybrid-subjectivities)  
-  *Critic of binary thinking who envisions hybrid human-machine identities as sites of resistance and redefinition.*
-- [Bruno Latour – Actor-Network Theory (ANT)](#bruno-latour--actor-network-theory-ant)  
-  *Proponent of distributed agency across networks of human and non-human actors, reshaping how systems are understood.*
+- [Alan Turing – Computational Foundations and the Imitation Game (1937, 1950)](#alan-turing--computational-foundations-and-the-imitation-game)  
+  *Originator of the Turing machine and the Imitation Game, laying the groundwork for **computational models of intelligence**.*
+- [Norbert Wiener – Cybernetics and Feedback Systems (1948)](#norbert-wiener--cybernetics-and-feedback-systems)  
+  *Founder of cybernetics, introducing self-regulating systems through **feedback loops and adaptive behavior**.*
+- [Donna Haraway – Cyborg Theory and Hybrid Subjectivities (1985)](#donna-haraway--cyborg-theory-and-hybrid-subjectivities)  
+  *Critic of binary thinking who envisions **hybrid human-machine identities** as sites of resistance and redefinition.*
+- [Bruno Latour – Actor-Network Theory (ANT) (1987)](#bruno-latour--actor-network-theory-ant)  
+  *Proponent of **distributed agency** across networks of human and non-human actors, reshaping how systems are understood.*
 
 ---
 
