Update 01. Intelligence Theories of.md

--- a/Collaborative AI/resources/01. Intelligence Theories of.md
+++ b/Collaborative AI/resources/01. Intelligence Theories of.md
@@ -5,6 +5,12 @@ This overview outlines the dominant historical models of intelligence prior to t
 ---
 
 ## 1. Intelligence as Divine Essence or Animating Force
+<figure>
+<img src="https://github.com/CHI-CityTech/AI-Curriculum/blob/main/Collaborative%20AI/resources/assets/DALL-E-intelligence%20as%20a%20divine%20animating%20force.png" alt="Description of the image" width="360", alt="Intelligence as Divine Essence">
+  <figcaption><i>DALL-E/Smith Image: Intelligence as animating force<?i></figcaption>
+</figure>
+
+
 
 **Core Idea**:  
 Intelligence is a spiritual or vital force, often granted or imbued by a deity or higher power.
@@ -25,6 +31,11 @@ Ancient mythology, sacred texts, animistic and early philosophical traditions.
 ---
 
 ## 2. Intelligence as Rational Thought (Reason)
+<figure>
+<img src="https://github.com/CHI-CityTech/AI-Curriculum/blob/main/Collaborative%20AI/resources/assets/DALL-E%202025%20-%20Intelligence%20as%20Reason%20Greek.jpg", width="360", alt="Intelligence as Divine Essence">
+  <figcaption><i>DALL-E/Smith Image: Greek Intelligence as Reason</i></figcaption>
+</figure>  
+
 
 **Core Idea**:  
 Intelligence is the capacity for abstract reasoning, logic, and understanding universals—what separates humans from animals.
