Update 01. Intelligence Theories of.md

--- a/Collaborative AI/resources/01. Intelligence Theories of.md
+++ b/Collaborative AI/resources/01. Intelligence Theories of.md
@@ -52,6 +52,11 @@ Classical Greek philosophy.
 ---
 
 ## 3. Intelligence as Ordered Knowledge
+<figure>
+<img src="https://github.com/CHI-CityTech/AI-Curriculum/blob/main/Collaborative%20AI/resources/assets/DALL%C2%B7E%202025-Intelligence%20as%20Ordered%20Knowledge.jpg", width="360", alt="Intelligence as Divine Essence">
+  <figcaption><i>Intelligence as Ordered Hierarchy</i></figcaption>
+</figure>  
+
 
 **Core Idea**:  
 Intelligence is the structured understanding of divine or moral order; a gift that allows humans to approach truth and virtue.
