Modify image and figcaption in intelligence theories
Updated image reference and commented out figcaption.

--- a/Collaborative AI/resources/01. Intelligence Theories of.md
+++ b/Collaborative AI/resources/01. Intelligence Theories of.md
@@ -5,9 +5,11 @@ This overview outlines some dominant historical models of intelligence prior to 
 ---
 
 ## 1. Intelligence as Divine Essence or Animating Force
-<figure>
-<img src="https://github.com/CHI-CityTech/AI-Curriculum/blob/main/Collaborative%20AI/resources/assets/DALL-E-intelligence%20as%20a%20divine%20animating%20force.png" alt="Description of the image" width="360", alt="Intelligence as Divine Essence">
-  <figcaption><i>DALL-E/Smith Image: Intelligence as animating force</i></figcaption>
+
+
+<figure >
+<img src="https://github.com/CHI-CityTech/AI-Curriculum/blob/main/Collaborative%20AI/resources/assets/DALL-E-intelligence%20as%20a%20divine%20animating%20force.png" alt="Description of the image" width="360"   alt="Intelligence as Divine Essence">
+ <!-- <figcaption><i>DALL-E/Smith Image: Intelligence as animating force</i ></figcaption> -->
 </figure>
 
 **Core Idea**:  
